<?xml version="1.0"?>
<package format="2">
  <name>mujoco_sim</name>
  <version>0.0.0</version>
  <description>The mujoco_sim package</description>

  <maintainer email="hoanggia@uni-bremen.de">giangnguyen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mujoco_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>

  </export>
</package>